# FakeFlix

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
WebServer/MVC/: package-lock.json
WebServer/MVC/controllers/: user.js
WebServer/MVC/modules/: user.js
WebServer/MVC/routes/: tokens.js
WebServer/MVC/services/: movies.js
recommendationSystem/header/: Delete.h  ILoadable.h  Post.h  ThreadPool.h
recommendationSystem/src/: Delete.cpp  Help.cpp  Loader.cpp  Patch.cpp  Post.cpp  RecommendAlgorithm.cpp  ThreadPool.cpp  Utilities.cpp  WriteToTxt.cpp
recommendationSystem/src/header/: ICommand.h  Loader.h  MemoryWriteable.h  RecommendAlgorithm.h  Server.h  WriteToTxt.h
recommendationSystem/tests/: AppTest.cpp
src/Android/gradle/: libs.versions.toml
src/MVC/: app.js  dockerfile  package-lock.json  package.json
src/MVC/controllers/: category.js  file.js  movies.js  tokens.js  uploadController.js  user.js  video.js
src/MVC/modules/: movies.js  user.js  video.js
src/androidApp/: settings.gradle.kts
src/recommendationSystem/: Dockerfile  Recommend.cpp  Server.cpp
src/web/: dockerfile
tests/: Dockerfile  LoaderTest.cpp  RecommendTests.cpp  testsForAddAndHelp.cpp
web-app/: package-lock.json  package.json
web-app/public/: homepage.css  homepage.html  homepage.js  index.html  login.css  login.html  login.js  register.html  register.js  starting_Page.css  starting_Page.html  starting_Page.js
webServer/src/: package.json
webapp/: package-lock.json  package.json
webapp/public/: index.html
webapp/src/: App.css  App.js
(+333 files in other folders)
